src2/objects/Asset.object
<CustomObject>
    <fields>
        <fullName>AccountTelemetry__c</fullName>
        <formula>IF(
    !CONTAINS($Api.Partner_Server_URL_410, &apos;skyline&apos;), 
    HYPERLINK(&quot;/&quot; &amp; Account.Account_Telemetry__c, Account.Account_Telemetry__r.Name), 
    HYPERLINK(&quot;/skyline/s/nes-accounttelemetry/&quot; &amp; Account.Account_Telemetry__c, Account.Account_Telemetry__r.Name)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Telemetry Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Action_Needed_Color__c</fullName>
        <label>Action Needed Color</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Green</fullName>
                </value>
                <value>
                    <fullName>Red</fullName>
                </value>
                <value>
                    <fullName>Orange</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Action_Needed__c</fullName>
        <formula>CASE( Action_Needed_Color__c, &apos;Green&apos;, IF(!CONTAINS($Api.Partner_Server_URL_410, &apos;skyline&apos;), IMAGE(&apos;/resource/Flag_Green&apos;,&apos;&apos;,40,40), IMAGE(&apos;/skyline/resource/Flag_Green&apos;,&apos;&apos;,40,40)), 
&apos;Red&apos;,IF(!CONTAINS($Api.Partner_Server_URL_410, &apos;skyline&apos;), IMAGE(&apos;/resource/Flag_Red&apos;,&apos;&apos;,40,40), IMAGE(&apos;/skyline/resource/Flag_Red&apos;,&apos;&apos;,40,40)), 
&apos;Orange&apos;,IF(!CONTAINS($Api.Partner_Server_URL_410, &apos;skyline&apos;), IMAGE(&apos;/resource/Flag_Orange&apos;,&apos;&apos;,40,40), IMAGE(&apos;/skyline/resource/Flag_Orange&apos;,&apos;&apos;,40,40)), 
&apos;None&apos;, IF(!CONTAINS($Api.Partner_Server_URL_410, &apos;skyline&apos;), IMAGE(&apos;/resource/Flag_Green&apos;,&apos;&apos;,40,40), IMAGE(&apos;/skyline/resource/Flag_Green&apos;,&apos;&apos;,40,40)), 
&apos;&apos;, IF(!CONTAINS($Api.Partner_Server_URL_410, &apos;skyline&apos;), IMAGE(&apos;/resource/Flag_Green&apos;,&apos;&apos;,40,40), IMAGE(&apos;/skyline/resource/Flag_Green&apos;,&apos;&apos;,40,40)), &apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Action Needed</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AssetUUID__c</fullName>
        <externalId>true</externalId>
        <label>Asset UUID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Asset_Address__c</fullName>
        <description>Address from the contact record related to Assset</description>
        <formula>IF(ISBLANK( ContactId ),&quot;&quot;,Contact.MailingStreet+&quot;, &quot;+Contact.MailingPostalCode+&quot;, &quot;+Contact.MailingCity)</formula>
        <label>Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ClusterNo__c</fullName>
        <label>Cluster No</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Contract__c</fullName>
        <label>Contract</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Inactive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Inactive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>InputDate__c</fullName>
        <label>Input Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Is_a_Gift__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is a Gift</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LastUpdate__c</fullName>
        <label>Last Update</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Last_Connection__c</fullName>
        <label>Last Connection</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Legacy_Id__c</fullName>
        <label>Legacy ID</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MacAddress__c</fullName>
        <label>Mac Address</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NES_Claim_Status__c</fullName>
        <defaultValue>&quot;Unclaimed&quot;</defaultValue>
        <label>Claim Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Claimed</fullName>
                </value>
                <value>
                    <fullName>Unclaimed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>NES_LastRefreshedTimestamp__c</fullName>
        <label>Last Refreshed Timestamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>NES_Machine_Sales_Org__c</fullName>
        <label>Machine Sales Organization</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NES_Nickname__c</fullName>
        <label>Nickname</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NES_OperationalStatus_Color__c</fullName>
        <formula>CASE( NES_OperationalStatus__c , &apos;Ok&apos;, IF(!CONTAINS($Api.Partner_Server_URL_410, &apos;skyline&apos;), IMAGE(&apos;/resource/Flag_Green&apos;,&apos;&apos;,40,40), IMAGE(&apos;/skyline/resource/Flag_Green&apos;,&apos;&apos;,40,40)), 
&apos;Down&apos;, IF(!CONTAINS($Api.Partner_Server_URL_410, &apos;skyline&apos;), IMAGE(&apos;/resource/Flag_Red&apos;,&apos;&apos;,40,40), IMAGE(&apos;/skyline/resource/Flag_Red&apos;,&apos;&apos;,40,40)), 
&apos;Warning&apos;, IF(!CONTAINS($Api.Partner_Server_URL_410, &apos;skyline&apos;), IMAGE(&apos;/resource/Flag_Orange&apos;,&apos;&apos;,40,40), IMAGE(&apos;/skyline/resource/Flag_Orange&apos;,&apos;&apos;,40,40)), 
&apos;Halted&apos;, IF(!CONTAINS($Api.Partner_Server_URL_410, &apos;skyline&apos;), IMAGE(&apos;/resource/Flag_Blue&apos;,&apos;&apos;,40,40), IMAGE(&apos;/skyline/resource/Flag_Blue&apos;,&apos;&apos;,40,40)), 
&apos;Disconnected&apos;, IF(!CONTAINS($Api.Partner_Server_URL_410, &apos;skyline&apos;), IMAGE(&apos;/resource/Flag_Grey&apos;,&apos;&apos;,40,40), IMAGE(&apos;/skyline/resource/Flag_Grey&apos;,&apos;&apos;,40,40)),&apos;&apos;)</formula>
        <label>Op. Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NES_OperationalStatus__c</fullName>
        <defaultValue>&quot;Disconnected&quot;</defaultValue>
        <label>Op. Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Ok</fullName>
                    <color>#009900</color>
                    <label>Ok</label>
                </value>
                <value>
                    <fullName>Down</fullName>
                    <color>#CC0000</color>
                    <label>Down</label>
                </value>
                <value>
                    <fullName>Disconnected</fullName>
                    <color>#BBBBBB</color>
                    <default>true</default>
                    <label>Disconnected</label>
                </value>
                <value>
                    <fullName>Warning</fullName>
                    <color>#E27001</color>
                    <label>Warning</label>
                </value>
                <value>
                    <fullName>Halted</fullName>
                    <color>#A845DC</color>
                    <label>Halted</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>NES_SIM_Id__c</fullName>
        <label>Sim ID</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PairingKey__c</fullName>
        <label>Pairing Key</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pos__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Point of Sales</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Assets</relationshipLabel>
        <relationshipName>Assets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Power_of_1__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Asset</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Process_Date__c</fullName>
        <label>Process Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Product_Image__c</fullName>
        <formula>image( Product2.Product_Image_URL__c, &quot;No Image&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Image</label>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>AllAssets</fullName>
        <filterScope>Everything</filterScope>
        <label>All Assets</label>
    </listViews>
    <listViews>
        <fullName>X00_AllAssets</fullName>
        <columns>ASSET.NAME</columns>
        <columns>ASSET.SERIAL_NUMBER</columns>
        <columns>ASSET.INSTALL_DATE</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.NAME</columns>
        <columns>PRODUCT2.NAME</columns>
        <columns>NES_Claim_Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>00: All Assets</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinatesInternal>Skyline</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>My_Clients_Machines</fullName>
        <columns>ASSET.NAME</columns>
        <columns>ASSET.SERIAL_NUMBER</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.NAME</columns>
        <columns>ASSET.STATUS</columns>
        <columns>NES_OperationalStatus_Color__c</columns>
        <columns>ASSET.INSTALL_DATE</columns>
        <columns>PRODUCT2.NAME</columns>
        <filterScope>Everything</filterScope>
        <label>02: My Assets</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinatesInternal>Skyline</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>My_Notable_Assets</fullName>
        <columns>ASSET.NAME</columns>
        <columns>ASSET.SERIAL_NUMBER</columns>
        <columns>ACCOUNT.NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ASSET.PARENT</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>NES_OperationalStatus__c</field>
            <operation>notEqual</operation>
            <value>Ok</value>
        </filters>
        <label>My Notable Assets</label>
        <language>en_US</language>
        <sharedTo>
        	<allPartnerUsers></allPartnerUsers>
            <roleAndSubordinatesInternal>Skyline</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>NES_Claimed_Machines</fullName>
        <columns>ASSET.NAME</columns>
        <columns>ASSET.SERIAL_NUMBER</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.NAME</columns>
        <columns>ASSET.STATUS</columns>
        <columns>NES_OperationalStatus_Color__c</columns>
        <columns>ASSET.INSTALL_DATE</columns>
        <columns>PRODUCT2.NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NES_Claim_Status__c</field>
            <operation>equals</operation>
            <value>Claimed</value>
        </filters>
        <label>01: Claimed Assets</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinatesInternal>Skyline</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>X00_Unclaimed_Machines</fullName>
        <columns>ASSET.NAME</columns>
        <columns>ASSET.SERIAL_NUMBER</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.NAME</columns>
        <columns>NES_Claim_Status__c</columns>
        <columns>ASSET.STATUS</columns>
        <columns>NES_OperationalStatus_Color__c</columns>
        <columns>ASSET.INSTALL_DATE</columns>
        <columns>PRODUCT2.NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NES_Claim_Status__c</field>
            <operation>equals</operation>
            <value>Unclaimed</value>
        </filters>
        <label>01: Unclaimed Assets</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinatesInternal>Skyline</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>X03_My_Assets_recently_created</fullName>
        <columns>ASSET.NAME</columns>
        <columns>ASSET.SERIAL_NUMBER</columns>
        <columns>ASSET.CREATED_DATE</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.NAME</columns>
        <columns>PRODUCT2.NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ASSET.CREATED_DATE</field>
            <operation>greaterOrEqual</operation>
            <value>N_MONTHS_AGO:1</value>
        </filters>
        <label>03: My Assets recently created</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinatesInternal>Skyline</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>X04_Installed_Machines</fullName>
        <columns>ASSET.NAME</columns>
        <columns>ASSET.SERIAL_NUMBER</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>ASSET.STATUS</columns>
        <columns>ASSET.INSTALL_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ASSET.INSTALL_DATE</field>
            <operation>notEqual</operation>
        </filters>
        <label>04: Installed Assets</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinatesInternal>Skyline</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>X05_Assets_to_pay_attention_to</fullName>
        <columns>ASSET.NAME</columns>
        <columns>ASSET.SERIAL_NUMBER</columns>
        <columns>ACCOUNT.NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ASSET.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Asset.Asset_Telemetry_Enabled_Chassis</value>
        </filters>
        <filters>
            <field>NES_OperationalStatus__c</field>
            <operation>notEqual</operation>
            <value>Ok</value>
        </filters>
        <label>05: Assets to pay attention to</label>
        <language>en_US</language>
        <sharedTo>
            <allPartnerUsers></allPartnerUsers>
            <roleAndSubordinatesInternal>Nespresso</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>Skyline</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>X06_Orphan_Asset_List_View</fullName>
        <columns>ASSET.NAME</columns>
        <columns>ASSET.SERIAL_NUMBER</columns>
        <columns>ASSET.INSTALL_DATE</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.NAME</columns>
        <columns>PRODUCT2.NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.NAME</field>
            <operation>equals</operation>
            <value>Orphan Assets Account</value>
        </filters>
        <label>06: Orphan Asset List View</label>
        <language>en_US</language>
        <sharedTo>
            <role>Skyline</role>
            <role>Skyline_HQ</role>
        </sharedTo>
    </listViews>
    <recordTypes>
        <fullName>Asset_Standard</fullName>
        <active>true</active>
        <label>Asset Standard</label>
    </recordTypes>
    <recordTypes>
        <fullName>Asset_Telemetry_Enabled_Chassis</fullName>
        <active>true</active>
        <label>Asset - Telemetry Enabled Chassis</label>
    </recordTypes>
    <recordTypes>
        <fullName>Asset_Telemetry_Enabled_Module</fullName>
        <active>true</active>
        <label>Asset - Telemetry Enabled Module</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>